@@ -1742,14 +1742,14 @@ objectDescriptionIfNonNil:(id)obj
 
   if (extensionDecls == nil) {
     extensionDecls = [NSMutableDictionary dictionary];
-    [extensionDeclarationsCache setObject:extensionDecls forKey:currClass];
+    [extensionDeclarationsCache setObject:extensionDecls forKey:(id<NSCopying>)currClass];
   }
 
   // get this class's extensions for the specified parent class
   NSMutableArray *array = [extensionDecls objectForKey:parentClass];
   if (array == nil) {
     array = [NSMutableArray array];
-    [extensionDecls setObject:array forKey:parentClass];
+    [extensionDecls setObject:array forKey:(id<NSCopying>)parentClass];
   }
 
   GDATA_DEBUG_ASSERT([childClass conformsToProtocol:@protocol(GDataExtension)],
@@ -1865,7 +1865,7 @@ objectDescriptionIfNonNil:(id)obj
                 [theClass extensionElementLocalName]];
       }
 
-      [gQualifiedNameMap setObject:name forKey:theClass];
+      [gQualifiedNameMap setObject:name forKey:(id<NSCopying>)theClass];
     }
   }
   return name;
@@ -1899,7 +1899,7 @@ objectDescriptionIfNonNil:(id)obj
     for (GDataObject *obj in objects) {
       [self ensureObject:obj hasXMLNameForExtensionClass:theClass];
     }
-    [extensions_ setObject:objects forKey:theClass];
+    [extensions_ setObject:objects forKey:(id<NSCopying>)theClass];
   } else {
     [extensions_ removeObjectForKey:theClass];
   }
@@ -1919,7 +1919,7 @@ objectDescriptionIfNonNil:(id)obj
 
   if (object) {
     [self ensureObject:object hasXMLNameForExtensionClass:theClass];
-    [extensions_ setObject:object forKey:theClass];
+    [extensions_ setObject:object forKey:(id<NSCopying>)theClass];
   } else {
     [extensions_ removeObjectForKey:theClass];
   }
@@ -1947,7 +1947,7 @@ objectDescriptionIfNonNil:(id)obj
       // create an array with the previous object and the new object
       NSMutableArray *array = [NSMutableArray arrayWithObjects:
                                previousObjOrArray, newObj, nil];
-      [extensions_ setObject:array forKey:theClass];
+      [extensions_ setObject:array forKey:(id<NSCopying>)theClass];
     }
   } else {
 
@@ -2098,7 +2098,7 @@ objectDescriptionIfNonNil:(id)obj
     attributeDeclarations_ = [[cache objectForKey:currClass] retain];
     if (attributeDeclarations_ == nil) {
       attributeDeclarations_ = [[NSMutableArray alloc] init];
-      [cache setObject:attributeDeclarations_ forKey:currClass];
+      [cache setObject:attributeDeclarations_ forKey:(id<NSCopying>)currClass];
     }
   }
 
