@@ -8,10 +8,12 @@ Changed since 1.12.0
 
 Additions
 
-- Added service method fetchEntryByUpdatingEntry:forEntryURL:completionHandler:
+- Added service methods fetchEntryWithURL:entryClass:completionHandler: and
+  fetchEntryByUpdatingEntry:forEntryURL:completionHandler:
 
 - Added MD5Checksum, GDataDocFilename, GDataDocSuggestedFilename,
-  GDataDocLastCommented, GDataSharedWithMe, GDataLastModifiedByMe to document entries
+  GDataDocLastCommented, GDataSharedWithMe, GDataLastModifiedByMe to document
+  entries
 
 - Added GDataCategoryLabelShared as a label for document entries.
 
